--- a/config.json
+++ b/config.json
@@ -3,5 +3,5 @@
     "minTime": 20,
     "batchResultLogItems": "",
     "appBaseURL": "http://localhost:3000",
-    "excludeFileRecordFromStatus": true
+    "excludeFileRecordFromStatus": false
 }
