--- a/config.json
+++ b/config.json
@@ -2,6 +2,5 @@
     "maxConcurrent": 80, 
     "minTime": 20,
     "batchResultLogItems": "",
-    "appBaseURL": "http://localhost:3000",
-    "excludeFileRecordFromStatus": false
+    "appBaseURL": "http://localhost:3000"
 }
