--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "batch-processing",
-  "version": "1.0.0",
+  "name": "oe-batch-processing",
+  "version": "1.1.0",
   "description": "This is a nodejs module for batch processing of files. See README.md for details.",
   "main": "index.js",
   "directories": {
