--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,17 @@
+.brackets.json
+.DS_Store
+.idea
+.project
+.strong-pm
+coverage
 node_modules
-node_modules/*
+**/bower_components
+**/node_modules
+npm-debug.log
 .vscode/
+nodered
+**/.nodered/.config.json
+**/fw-log.log*
+.settings/
+*.njsproj
+.vimrc
