--- a/package.json
+++ b/package.json
@@ -1,29 +1,52 @@
 {
   "name": "oe-batch-processing",
-  "version": "1.8.0",
+  "version": "0.0.1",
   "description": "This is a nodejs module for batch processing of files. See README.md for details.",
+  "engines": {
+    "node": ">=6"
+  },
   "main": "index.js",
-  "directories": {
-    "test": "test"
+  "scripts": {
+    "pretest": "npm install --no-optional",
+    "test": "mocha test/test.js",
+    "lint": "eslint .",
+    "fix-lint": "eslint --fix .",
+    "grunt-cover": "grunt test-with-coverage"
   },
   "dependencies": {
-    "bottleneck": "^2.3.0",
-    "line-by-line": "^0.1.6",
-    "oe-logger": "^1.0.0",
-    "request": "^2.85.0",
-    "uuid": "^3.2.1"
+    "bottleneck": "2.16.2",
+    "camelcase": "5.0.0",
+    "line-by-line": "0.1.6",
+    "lodash": "4.17.11",
+    "oe-cloud": "git+http://evgit/oec-next/oe-cloud.git#master",
+    "oe-common-mixins": "git+http://evgit/oec-next/oe-common-mixins.git#master"
   },
   "devDependencies": {
-    "mocha": "^5.1.1",
-    "chai": "^4.1.2"
-  },
-  "scripts": {
-    "test": "mocha test/batch-process-tests.js"
+    "babel-eslint": "7.2.3",
+    "chai": "3.4.1",
+    "chai-datetime": "1.4.0",
+    "chai-things": "0.2.0",
+    "chalk": "1.1.1",
+    "eslint": "4.10.0",
+    "grunt": "1.0.3",
+    "grunt-contrib-clean": "2.0.0",
+    "grunt-contrib-copy": "1.0.0",
+    "grunt-mkdir": "1.0.0",
+    "grunt-mocha-istanbul": "5.0.2",
+    "grunt-mocha-test": "0.13.3",
+    "istanbul": "0.4.5",
+    "mocha": "5.2.0",
+    "superagent-defaults": "0.1.14",
+    "supertest": "3.4.2",
+    "grunt-banner": "0.6.0",
+    "grunt-cli": "1.3.2",
+    "grunt-jsbeautifier": "0.2.13",
+    "loopback-connector-mongodb": "^3.4.2",
+    "oe-connector-postgresql": "git+http://evgit/oec-next/oe-connector-postgresql.git#master"
   },
   "repository": {
     "type": "git",
-    "url": "git@10.73.97.24:oecloud.io/batch-processing.git"
+    "url": "git@evgit:oec-next/oe-batch-processing.git"
   },
-  "author": "Ajith Vasudevan",
   "license": "MIT"
 }
