--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "oe-batch-processing",
-  "version": "0.0.1",
+  "version": "2.0.0",
   "description": "This is a nodejs module for batch processing of files. See README.md for details.",
   "engines": {
     "node": ">=6"
@@ -18,8 +18,8 @@
     "camelcase": "5.0.0",
     "line-by-line": "0.1.6",
     "lodash": "4.17.11",
-    "oe-cloud": "git+http://evgit/oec-next/oe-cloud.git#master",
-    "oe-common-mixins": "git+http://evgit/oec-next/oe-common-mixins.git#master"
+    "oe-cloud": "git+http://evgit/oecloud.io/oe-cloud.git#master",
+    "oe-common-mixins": "git+http://evgit/oecloud.io/oe-common-mixins.git#master"
   },
   "devDependencies": {
     "babel-eslint": "7.2.3",
@@ -42,11 +42,11 @@
     "grunt-cli": "1.3.2",
     "grunt-jsbeautifier": "0.2.13",
     "loopback-connector-mongodb": "^3.4.2",
-    "oe-connector-postgresql": "git+http://evgit/oec-next/oe-connector-postgresql.git#master"
+    "oe-connector-postgresql": "git+http://evgit/oecloud.io/oe-connector-postgresql.git#master"
   },
   "repository": {
     "type": "git",
-    "url": "git@evgit:oec-next/oe-batch-processing.git"
+    "url": "https://github.com/EdgeVerve/oe-batch-processing.git"
   },
   "license": "MIT"
 }
