--- a/package.json
+++ b/package.json
@@ -41,7 +41,7 @@
     "grunt-banner": "0.6.0",
     "grunt-cli": "1.3.2",
     "grunt-jsbeautifier": "0.2.13",
-    "loopback-connector-mongodb": "^3.4.2",
+    "loopback-connector-mongodb": "3.9.2",
     "oe-connector-postgresql": "git+http://evgit/oecloud.io/oe-connector-postgresql.git#master"
   },
   "repository": {
