--- a/package.json
+++ b/package.json
@@ -17,8 +17,8 @@
     "bottleneck": "2.16.2",
     "line-by-line": "0.1.6",
     "lodash": "4.17.14",
-    "oe-cloud": "git+http://evgit/oecloud.io/oe-cloud.git#2.1.0",
-    "oe-common-mixins": "git+http://evgit/oecloud.io/oe-common-mixins.git#2.1.0"
+    "oe-cloud": "git+http://evgit/oecloud.io/oe-cloud.git#master",
+    "oe-common-mixins": "git+http://evgit/oecloud.io/oe-common-mixins.git#master"
   },
   "devDependencies": {
     "babel-eslint": "7.2.3",
@@ -41,7 +41,7 @@
     "grunt-cli": "1.3.2",
     "grunt-jsbeautifier": "0.2.13",
     "loopback-connector-mongodb": "3.9.2",
-    "oe-connector-postgresql": "git+http://evgit/oecloud.io/oe-connector-postgresql.git#2.0.0"
+    "oe-connector-postgresql": "git+http://evgit/oecloud.io/oe-connector-postgresql.git#master"
   },
   "repository": {
     "type": "git",
